fix:调整 Springboot3 Redis 的 yml 结构